--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,9 +11,13 @@
  * file per style scope.
  *
  *= require_self
+
  */
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'font-awesome';
-@import 'styles';
+@import 'base';
+@import 'responsive';
+
+
