--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -14,8 +14,16 @@
   <div class="navbar-collapse collapse" id="navbar-collapse">
 
     <ul class="nav navbar-nav">
-     <%= nav_link_to 'About Us', about_index_path, {}, { controller_segment: 1, wrapper: 'li', wrapper_class: 'nav-item' } %>
-    </ul>   <!-- TODO:  FINALIZE MENU TREE -->
+
+        <li class="nav-item dropdown">
+
+
+
+        </li>
+
+
+    </ul>
+
 
   </div>
 
