contact resource in place.  map embedded.

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,13 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<div class="row page-row">
+
+  <article class="welcome col-md-8 col-sm-7">
+    <h3 class="title">Welcome to EDUCO</h3>
+  </article>
+
+
+  <aside class="page-sidebar col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
+    <%= render 'sidebar' %>
+  </aside>
+
+</div>
+
