--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -15,15 +15,26 @@
 
     <ul class="nav navbar-nav">
 
-        <li class="nav-item dropdown">
+        <!-- ABOUT CONTROLLER TREE -->
+        <%= content_tag :li, class:"nav-item dropdown #{is_active?('about')}" do %>
 
+            <%= link_to "#", class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
+                About <%= icon('angle-down') %>
+            <% end %>
 
+            <ul class="dropdown-menu">
 
-        </li>
+              <%= content_tag :li, link_to('About Us', about_index_path) %>
+              <%= content_tag :li, link_to('FAQ', about_faq_path) %>
 
+            </ul>
+
+        <% end %>
+
+        <!-- CONTACTS CONTROLLER TREE -->
+        <%= content_tag :li, link_to('Contact', contacts_index_path), class:"nav-item #{is_active?('contacts')}" %>
 
     </ul>
-
 
   </div>
 
