--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -32,7 +32,7 @@
     <ul class="menu-top navbar-right hidden-xs">
       <%= content_tag :li, link_to('Home', root_path), class:'divider' %>
       <%= content_tag :li, link_to('FAQ', about_faq_path), class:'divider' %>  <!-- TODO: FAQ PAGE -->
-      <%= content_tag :li, link_to('Contact', "#") %>   <!-- TODO: CONTACT PAGE -->
+      <%= content_tag :li, link_to('Contact', contacts_index_path) %>   <!-- TODO: CONTACT PAGE -->
     </ul>
 
     <%= tag :br %>
