--- a/app/views/layouts/_head.erb
+++ b/app/views/layouts/_head.erb
@@ -10,9 +10,9 @@
 
 <title><%= page_title %></title>
 
-<%= stylesheet_link_tag 'application', media:'all', 'data-turbolinks-track' => true %>
+<%= stylesheet_link_tag 'application', params[:controller], media:'all', 'data-turbolinks-track' => true %>
 
-<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'application', params[:controller], 'data-turbolinks-track' => true %>
 
 <!--[if lt IE 9]>
 <%= javascript_include_tag 'https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min' %>
