added FAQ model.

--- a/app/views/about/faq.html.erb
+++ b/app/views/about/faq.html.erb
@@ -1,7 +1,43 @@
 <div class="row page-row">
 
-  <article class="welcome col-md-8 col-sm-7">
-    <h3 class="title">Frequently Asked Questions</h3>
+  <article class="faq-wrapper col-md-8 col-sm-7">
+
+    <div class="panel-group" id="accordion">
+
+      <div class="panel panel-default">
+
+        <div class="panel-heading">
+
+          <h4 class="panel-title">
+            <%= link_to 'Question 1', "#collapse-1", data: { toggle:'collapse', parent:'accordion' } %>
+          </h4>
+
+          <div id="collapse-1" class="panel-collapse collapse in">
+
+            <div class="panel-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lacinia nunc.
+              Proin egestas imperdiet ante non fermentum. Duis sollicitudin lacinia massa ac
+              sagittis. Pellentesque et elit erat. Sed quis sem consectetur, interdum nisi vel,
+              eleifend leo. Quisque nunc libero, porta vel varius eget, dapibus in nisl. Cras
+              fringilla eu sem a ultrices. Proin sit amet nunc eget nisl fringilla iaculis sed
+              eu nulla. Ut malesuada, risus nec eleifend consequat, quam nulla sodales felis,
+              sit amet iaculis leo leo egestas sapien. Duis tristique diam in lectus tempor,
+              nec mattis ligula consequat. Aliquam eget mauris sit amet dui bibendum iaculis.
+              Proin eu justo ut massa vulputate eleifend. Praesent mattis lorem orci, ac interdum
+              sapien pretium sit amet.
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+
+
+    </div>
+
+
   </article>
 
 
