faq template complete.

--- a/app/views/about/faq.html.erb
+++ b/app/views/about/faq.html.erb
@@ -9,37 +9,49 @@
         <div class="panel-heading">
 
           <h4 class="panel-title">
-            <%= link_to 'Question 1', "#collapse-1", data: { toggle:'collapse', parent:'accordion' } %>
+            <%= link_to @first_faq.question, "#collapse-#{@first_faq.id}", data: { toggle:'collapse', parent:'#accordion' } %>
           </h4>
 
-          <div id="collapse-1" class="panel-collapse collapse in">
+        </div>
 
-            <div class="panel-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lacinia nunc.
-              Proin egestas imperdiet ante non fermentum. Duis sollicitudin lacinia massa ac
-              sagittis. Pellentesque et elit erat. Sed quis sem consectetur, interdum nisi vel,
-              eleifend leo. Quisque nunc libero, porta vel varius eget, dapibus in nisl. Cras
-              fringilla eu sem a ultrices. Proin sit amet nunc eget nisl fringilla iaculis sed
-              eu nulla. Ut malesuada, risus nec eleifend consequat, quam nulla sodales felis,
-              sit amet iaculis leo leo egestas sapien. Duis tristique diam in lectus tempor,
-              nec mattis ligula consequat. Aliquam eget mauris sit amet dui bibendum iaculis.
-              Proin eu justo ut massa vulputate eleifend. Praesent mattis lorem orci, ac interdum
-              sapien pretium sit amet.
-            </div>
+        <div id="collapse-<%= @first_faq.id %>" class="panel-collapse collapse in">
 
+          <div class="panel-body">
+            <%= @first_faq.answer %>
           </div>
 
         </div>
 
-
       </div>
 
+        <% @other_faqs.each do |faq| %>
+
+            <div class="panel panel-default">
+
+                <div class="panel-heading">
+
+                  <h4 class="panel-title">
+                    <%= link_to faq.question, "#collapse-#{faq.id}", class:'collapsed',
+                                data: { toggle:'collapse', parent:'#accordion' } %>
+                  </h4>
+
+                </div>
+
+                <div id="collapse-<%= faq.id %>" class="panel-collapse collapse">
+
+                  <div class="panel-body">
+                    <%= faq.answer %>
+                  </div>
+
+                </div>
+
+            </div>
+
+        <% end %>
 
     </div>
 
-
   </article>
-
 
   <aside class="page-sidebar col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
     <%= render 'sidebar' %>
