setting global vars in application controller.

--- a/app/views/contacts/_sidebar.erb
+++ b/app/views/contacts/_sidebar.erb
@@ -7,5 +7,5 @@
 </section>
 
 <section class="widget has-divider">
-  <h3 class="title">All Inquiries</h3>
+  <%= render 'shared/testimonials' %>
 </section>
