--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -1,1 +1,49 @@
 <h3 class="title">Student Testimonials</h3>
+
+<div id="testimonials-carousel" class="testimonials-carousel carousel slide">
+
+  <div class="carousel-inner">
+
+    <% @testimonials.each do |t| %>
+
+        <div class="item">
+
+          <blockquote class="quote">
+
+            <%= icon('quote-left') %>
+
+            <%= t.description %>
+
+          </blockquote>
+
+          <div class="row">
+
+            <p class="people col-md-8 col-md-push-1">
+
+              <%= content_tag :span, t.name, class:'name' %>
+
+              <%= tag :br %>
+
+              <%= content_tag :span, t.location, class:'title' %>
+
+            </p>
+
+            <%= image_tag 'profile-1.png', class:'profile col-md-4' %>
+
+          </div>
+
+        </div>
+
+    <% end %>
+
+  </div>
+
+  <div class="carousel-controls">
+
+    <%= link_to icon('caret-left'), "#testimonials-carousel", data: { slide:'prev' } %>
+
+    <%= link_to icon('caret-right'), "#testimonials-carousel", data: { slide:'next' } %>
+
+  </div>
+
+</div>
