added STAFF model.

--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -25,6 +25,7 @@
             <ul class="dropdown-menu">
 
               <%= content_tag :li, link_to('About Us', about_index_path) %>
+              <%= content_tag :li, link_to('Leadership', about_leadership_path) %>
               <%= content_tag :li, link_to('FAQ', about_faq_path) %>
 
             </ul>
