--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,15 @@
       <%= render 'layouts/footer' %>
     </footer>
 
+    <%= javascript_tag do %>            <!-- HUBSPOT TRACKING SCRIPT -->
+        (function(d,s,i,r) {
+            if (d.getElementById(i)){return;}
+            var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
+            n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/485813.js';
+            e.parentNode.insertBefore(n, e);
+        })(document,"script","hs-analytics",300000);
+    <% end %>
+
     <%= debug(params) if Rails.env.development? %>
 
 </body>
