--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -32,6 +32,20 @@
 
         <% end %>
 
+        <%= content_tag :li, class:"nav-item dropdown #{is_active?('admissions')}" do %>
+
+            <%= link_to "#", class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
+              Admissions <%= icon('angle-down') %>
+            <% end %>
+
+            <ul class="dropdown-menu">
+
+                <%= content_tag :li, link_to('Apply Now', admissions_apply_now_path) %>
+
+            </ul>
+
+        <% end %>
+
         <!-- CONTACTS CONTROLLER TREE -->
         <%= content_tag :li, link_to('Contact', contacts_index_path), class:"nav-item #{is_active?('contacts')}" %>
 
