added file upload capability for admin.

--- a/app/views/about/leadership.html.erb
+++ b/app/views/about/leadership.html.erb
@@ -8,7 +8,7 @@
 
             <figure class="thumb col-md-3 col-sm-4 col-xs-6">
 
-                <%= image_tag leader.image_file_name, class:'img-responsive' %>
+                <%= image_tag leader.image_file_name_url, width:170, height:210, class:'img-responsive' %>
 
             </figure>
 
