added file upload capability for admin.

--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -28,7 +28,7 @@
 
             </p>
 
-            <%= image_tag t.image_file_name, class:'profile col-md-4' %>
+            <%= image_tag t.image_file_name_url, class:'profile col-md-4' %>
 
           </div>
 
