patched namespace conflict in application controller.

--- a/app/views/shared/_events.erb
+++ b/app/views/shared/_events.erb
@@ -1,6 +1,6 @@
 <h3 class="title">Upcoming Events</h3>
 
-<% @events.each do |event| %>
+<% @events_collection.each do |event| %>
 
     <article class="events-item row page-row">
 
