--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -4,7 +4,7 @@
 
   <div class="carousel-inner">
 
-    <% @testimonials.each do |t| %>
+    <% @testimonials_collection.each do |t| %>
 
         <div class="item">
 
