removed unneeded controllers.

--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -8,8 +8,8 @@
         <div class="footer-col-inner">
           <h3>About</h3>
           <ul>
-            <%= content_tag :li, link_to(icon('caret-right', 'About Us'), about_index_path) %>
-            <%= content_tag :li, link_to(icon('caret-right', 'Contact Us'), contacts_index_path) %>  <!-- TODO -->
+            <%= content_tag :li, link_to(icon('caret-right', 'About Us'), '#') %>
+            <%= content_tag :li, link_to(icon('caret-right', 'Contact Us'), '#') %>  <!-- TODO -->
             <%= content_tag :li, link_to(icon('caret-right', 'Privacy Policy'), "#") %>  <!-- TODO -->
             <%= content_tag :li, link_to(icon('caret-right', 'Terms & Conditions'), "#") %>  <!-- TODO -->
           </ul>
