--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -15,41 +15,11 @@
 
     <ul class="nav navbar-nav">
 
-        <!-- ABOUT CONTROLLER TREE -->
-        <%= content_tag :li, class:"nav-item dropdown #{is_active?('about')}" do %>
+      <!-- TODO:  complete navigation system -->
 
-            <%= link_to "#", class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
-                About <%= icon('angle-down') %>
-            <% end %>
-
-            <ul class="dropdown-menu">
-
-              <%= content_tag :li, link_to('About Us', '#') %>
-              <%= content_tag :li, link_to('Leadership', '#') %>
-              <%= content_tag :li, link_to('FAQ', '#') %>
-
-            </ul>
-
-        <% end %>
-
-        <%= content_tag :li, class:"nav-item dropdown #{is_active?('admissions')}" do %>
-
-            <%= link_to "#", class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
-              Admissions <%= icon('angle-down') %>
-            <% end %>
-
-            <ul class="dropdown-menu">
-
-                <%= content_tag :li, link_to('Apply Now', '#') %>
-
-            </ul>
-
-        <% end %>
-
-        <!-- CONTACTS CONTROLLER TREE -->
-        <%= content_tag :li, link_to('Contact', '#'), class:"nav-item #{is_active?('contacts')}" %>
 
     </ul>
+
 
   </div>
 
