--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -15,7 +15,27 @@
 
     <ul class="nav navbar-nav">
 
-      <!-- TODO:  complete navigation system -->
+      <li class="nav-item dropdown">    <!-- JOURNEY MENU SECTION -->
+
+        <%= link_to '#', class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
+            Your Journey  <%= icon('angle-down') %>
+        <% end %>
+
+        <ul class="dropdown-menu">
+          <%= content_tag :li, link_to('Start here', journey_path) %>
+          <%= content_tag :li, link_to('First term', journey_term1_path) %>
+          <%= content_tag :li, link_to('Second term', journey_term2_path) %>
+          <%= content_tag :li, link_to('Third term', journey_term3_path) %>
+          <%= content_tag :li, link_to('Last term', journey_term4_path) %>
+        </ul>
+
+
+
+
+      </li>
+
+
+
 
 
     </ul>
