--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -7,11 +7,11 @@
       <div class="footer-col col-md-3 col-sm-4 about">
         <div class="footer-col-inner">
           <h3>About</h3>
-          <ul>
+          <ul id="footer-nav">
             <%= content_tag :li, link_to(icon('caret-right', 'About Rivendell Program'), about_path) %>
             <%= content_tag :li, link_to(icon('caret-right', 'About San Diego Christian'), @sdc_url, target:'_blank') %>
             <%= content_tag :li, link_to(icon('caret-right', 'About WASC'), @wasc_url, target:'_blank') %>
-            <%= content_tag :li, link_to(icon('caret-right', 'Contact Us'), new_contact_path) %>
+            <%= content_tag :li, link_to(icon('caret-right', 'Contact us'), new_contact_path) %>
           </ul>
         </div>
       </div>
@@ -65,7 +65,7 @@
       <small class="copyright col-md-6 col-sm-12 col-xs-12">
         Copyright &copy; 2015 Rivendell Education Company | Website by <%= link_to 'Red Sherpa LLC', 'http://www.sherpa.red', target:'_blank' %>
       </small>
-      <ul class="social pull-right col-md-6 col-sm-12 col-xs-12">
+      <ul id="social-nav-bottom" class="social pull-right col-md-6 col-sm-12 col-xs-12">
         <%= content_tag :li, link_to(icon('google-plus'), @google_plus_url, target:'_blank') %>
         <%= content_tag :li, link_to(icon('pinterest'), @pinterest_url, target:'_blank') %>
         <%= content_tag :li, link_to(icon('facebook'), @facebook_url, target:'_blank') %>
