--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -15,7 +15,7 @@
 
     <ul class="nav navbar-nav">
 
-      <li class="nav-item dropdown">    <!-- JOURNEY MENU SECTION -->
+      <li id="journey-nav" class="nav-item dropdown">    <!-- JOURNEY MENU SECTION -->
 
         <%= link_to '#', class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
             your journey  <%= icon('angle-down') %>
@@ -31,7 +31,7 @@
 
       </li>
 
-      <li class="nav-item dropdown">    <!-- SEEKING TRUTH MENU SECTION -->
+      <li id="seeking-truth-nav" class="nav-item dropdown">    <!-- SEEKING TRUTH MENU SECTION -->
 
         <%= link_to '#', class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
             seeking truth  <%= icon('angle-down') %>
@@ -46,7 +46,7 @@
 
       </li>
 
-      <li class="nav-item dropdown">    <!-- BUILDING CHARACTER MENU SECTION -->
+      <li id="building-character-nav" class="nav-item dropdown">    <!-- BUILDING CHARACTER MENU SECTION -->
 
         <%= link_to '#', class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
             building character  <%= icon('angle-down') %>
@@ -61,7 +61,7 @@
 
       </li>
 
-      <li class="nav-item dropdown">    <!-- ADMISSIONS MENU SECTION -->
+      <li id="admissions-nav" class="nav-item dropdown">    <!-- ADMISSIONS MENU SECTION -->
 
         <%= link_to '#', class:'dropdown-toggle', data: { toggle:'dropdown', hover:'dropdown', delay:'0' } do %>
             admissions  <%= icon('angle-down') %>
