--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <div class="breadcrumbs pull-right">
                 <ul class="breadcrumbs-list">
                   <li class="breadcrumbs-label">You are here:</li>
-                  <li>
+                  <li id="breadcrumbs-links">
                     <%= link_to 'Home', root_path %>
                     <%= icon 'angle-right' %>
                   </li>
