--- a/app/views/layouts/application_full.html.erb
+++ b/app/views/layouts/application_full.html.erb
@@ -25,6 +25,13 @@
 
     <div class="page-wrapper">
 
+      <header class="page-heading clearfix">
+        <h1 class="heading-title pull-left"><%= @page_title %></h1>
+        <div class="breadcrumbs pull-right">
+          <%= render_breadcrumbs :builder => ::BootstrapBreadcrumbsBuilder %>
+        </div>
+      </header>
+
       <div class="page-content">
         <div class="row page-row">
           <%= yield %>
@@ -44,8 +51,6 @@
 <%= debug(params) if Rails.env.development? %>
 
 </body>
-
-
 
 </html>
 
