added leadership page with embedded ruby pulling from STAFF database table.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<%= holder_tag '750x300', nil, nil, class:'img-responsive' %>
+
+<h3 class="text-danger">
+  We need someone to write copy about our relationship with San Diego Christian
+</h3>
