--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <div class="page-content">
               <div class="row page-row">
 
-                <article class="welcome col-md-8 col-sm-7">
+                <article class="col-md-8 col-sm-7 <%= @page_class %>">
                   <%= yield %>
                 </article>
 
