--- a/app/views/pages/leadership.html.erb
+++ b/app/views/pages/leadership.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#leadership</h1>
-<p>Find me in app/views/pages/leadership.html.erb</p>
+<% @leadership.each do |leader| %>
+
+    <div class="row page-row">
+
+      <figure class="thumb col-md-3 col-sm-4 col-xs-6">
+        <%= cl_image_tag leader.image_file_name_url %>
+      </figure>
+
+      <div class="details col-md-9 col-sm-8 col-xs-6">
+
+        <%= content_tag :h3, leader.name, class:'title' %>
+
+        <%= content_tag :h4, leader.title %>
+
+        <%= content_tag :p, leader.bio %>
+
+      </div>
+
+    </div>
+
+<% end %>
