added nav_lynx gem.  added sidebar variable in application layout.  added about_us sidebar.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
                 </article>
 
                 <aside class="page-sidebar col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
-                  <%= render 'sidebar' %>
+                  <%= render "shared/#{@sidebar}_sidebar" if @sidebar %>
                 </aside>
 
               </div>
