--- a/app/views/shared/_about_sidebar.erb
+++ b/app/views/shared/_about_sidebar.erb
@@ -8,6 +8,8 @@
 
     <%= nav_link_to 'Faculty', about_faculty_path, {}, { wrapper: 'li' } %>
 
+    <%= nav_link_to 'Accreditation', about_accreditation_path, {}, { wrapper: 'li' } %>
+
     <%= nav_link_to 'Frequently asked questions', about_faq_path, {}, { wrapper: 'li' } %>
 
     <%= nav_link_to 'Rivendell Foundation', about_foundation_path, {}, { wrapper: 'li' } %>
