contacts model and resources work.  all specs pass.

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -13,3 +13,4 @@
   Feel free to ask us any question using the form below.  Someone from our staff will answer your inquiry shortly.
 </p>
 
+<%= render 'form' %>
