--- a/app/views/shared/_download_prospectus.erb
+++ b/app/views/shared/_download_prospectus.erb
@@ -1,4 +1,4 @@
-<%= content_tag :h3, "Why the #{@company_name}", class:'title' %>
+<%= content_tag :h3, "Why the #{@company_name}?", class:'title' %>
 
 <%= content_tag :p, "Discover why the #{@company_name} is the right choice for your higher education:" %>
 
