--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -40,9 +40,9 @@
 
   <div class="carousel-controls">
 
-    <%= link_to icon('caret-left'), "#testimonials-carousel", data: { slide:'prev' } %>
+    <%= link_to icon('caret-left'), '#testimonials-carousel', data: { slide:'prev' } %>
 
-    <%= link_to icon('caret-right'), "#testimonials-carousel", data: { slide:'next' } %>
+    <%= link_to icon('caret-right'), '#testimonials-carousel', data: { slide:'next' } %>
 
   </div>
 
