added course model.

--- a/app/views/layouts/_main_nav.erb
+++ b/app/views/layouts/_main_nav.erb
@@ -41,7 +41,7 @@
           <%= content_tag :li, link_to('Start here', seeking_truth_path) %>
           <%= content_tag :li, link_to('Pedagogy', seeking_truth_pedagogy_path) %>
           <%= content_tag :li, link_to('Curriculum', seeking_truth_curriculum_path) %>
-          <%= content_tag :li, link_to('Courses', '#') %>  <!-- TODO:  add courses resources -->
+          <%= content_tag :li, link_to('Courses', seeking_truth_courses_path) %> 
         </ul>
 
       </li>
